--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ body {
 
 /* Nav bar */
 
+/* NEW NAV learned from https://codepen.io/rexdesigndk/pen/gJYExb*/
 .center {
 	text-align: center;
 }
@@ -30,7 +31,7 @@ body {
 	align-items: center;
 	justify-content: space-between;
 	margin: auto;
-	width: 90%;
+	width: 100%;
 	height: 80px;
 	border-radius: 0 0 15px 15px;
 	padding: 0 25px;
@@ -46,8 +47,8 @@ body {
 }
 
 .logo {
-	height: 40px;
-    color: red;
+	height: 30px;
+	color: red;
 }
 
 .nav-tabs {
@@ -94,7 +95,7 @@ body {
 		align-items: flex-end;
 		margin-top: 80px;
 		width: 100%;
-	}
+  }
 
 	.nav-tab:not(:last-child) {
 		padding: 20px 25px;
@@ -115,8 +116,8 @@ body {
 		height: 15px;
 		cursor: pointer;
 		z-index: 2;
-		padding: 10px;
 		border-radius: 10px;
+    /*hamburger*/
 	}
 
 	.menu-btn .menu {
@@ -167,6 +168,7 @@ body {
 		}
 	}
 }
+
 /* Nav bar */
 
 .header-text{
@@ -191,6 +193,7 @@ body {
 .container{
     padding: 10px, 5%;
 }
+
 
 
 /*footer learned from https://youtu.be/JViuPwlP1mU*/
@@ -269,3 +272,4 @@ footer{
 	  grid-gap: 20px;
 	}
   }
+  
