--- a/css/style.css
+++ b/css/style.css
@@ -321,3 +321,55 @@ footer .container .contact li a {
 	}
 }
 /* Footer */
+
+/* Reponsiveness*/
+/* for nav header*/
+@media (max-width: 1480px){
+    header{
+        padding: 12px 2.5%;
+        transition: .1s;
+    }
+    header.sticky{
+        padding: 10px 2.5%;
+        transition: .1s;
+    }
+    section{
+        padding: 110px 3% 60px;
+    }
+    .end{
+        padding: 15px 3%;
+    }
+}
+
+/* for text size*/
+@media (max-width: 1100px){
+    :root{
+        --big-font: 4rem;
+        --h2-font: 2.5rem;
+        --p-font: 1rem;
+        transition: .1s;
+    }
+    .home-text{
+        font-size: 2.5rem;
+    }
+    .home{
+        height: 85vh;
+    }
+}
+
+/* for about*/
+@media (max-width: 920px){
+    .about{
+        grid-template-columns: 1fr;
+    }
+    .aboutimg{
+        text-align: center;
+        order: 2;
+    }
+    .aboutimg img{
+        width: 100%;
+        height: auto;
+        max-width: 100%;
+    }
+}
+
