--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,13 @@ header.sticky{
     width: 100%;
     border-radius: 8px;
 }
+.projectimg img{
+    max-width: 600px;
+    height: auto;
+    width: 100%;
+    border-radius: 8px;
+}
+
 .aboutinfo h2{
     font-size: var(--h2-font);
     line-height: 1;
