--- a/css/style.css
+++ b/css/style.css
@@ -8,19 +8,14 @@
     scroll-behavior: smooth;
 }
 :root{
-    --bg-color: white;
-    --second-bg-color: #202020;
-    --text-color: red;
-    --second-color: black;
-    --main-color: darkred;
     --big-font: 5rem;
     --h2-font: 3rem;
     --p-font: 1.1rem;
 }
 
 body{
-    background: var(--bg-color);
-    color: var(--text-color);
+    background: white;
+    color: red;
 }
 
 header{
@@ -39,13 +34,13 @@ header{
 }
 
 .logo{
-    color: var(--text-color);
+    color: red;
     font-size: 35px;
     font-weight: 700;
     letter-spacing: 1px;
 }
 span{
-    color: var(--main-color);
+    color: darkred;
 }
 .navlist{
     display: flex;
@@ -53,7 +48,7 @@ span{
 
 /* Nav bar text */
 .navlist a{
-    color: var(--second-color);
+    color: black;
     font-size: 17px;
     font-weight: 500;
     margin: 0 25px;
@@ -61,7 +56,7 @@ span{
 }
 
 .navlist a:hover{ /* nav hover darkred*/
-    color: var(--main-color);
+    color: darkred;
 }
 .navlist a.active{ /* nav hover darkred*/
     color: red;
@@ -69,7 +64,7 @@ span{
 
 #hamburger-icon{
     font-size: 35px;
-    color: var(--text-color);
+    color: red;
     z-index: 10001;
     cursor: pointer;
     margin-left: 25px;
@@ -104,26 +99,26 @@ section{
 }   
 .two{
     display: inline-block;
-    color: var(--second-color);
+    color: black;
     font-size: 20px;
     font-weight: 500;
 }
 .home-text h1{
     font-size: var(--big-font);
     font-weight: 700;
-    color: var(--text-color);
+    color: red;
     line-height: 1.1;
     margin: 0 0 8px;
 }
 .home-text h3{
-    color: var(--text-color);
+    color: red;
     margin: 0 0 35px;
     font-size: 3rem;
     font-weight: 700;
     line-height: 1.1;
 }
 .home-text p{
-    color: var(--second-color);
+    color: black;
     font-size: var(--p-font);
     line-height: 1.8;
     margin-bottom: 40px;
@@ -161,7 +156,7 @@ header.sticky{
 .aboutinfo h4{
     font-size: 24px;
     font-weight: 600;
-    color: var(--text-color);
+    color: red;
     line-height: 1.7;
     margin: 15px 0 30px;
 }
@@ -175,7 +170,7 @@ header.sticky{
     text-align: center;
 }
 .maintext p{
-    color: var(--second-color);
+    color: black;
     font-size: 15px;
     margin-bottom: 15px;
 }
@@ -393,7 +388,7 @@ footer .container .contact li a {
         left: 0;
         display: flex;
         flex-direction: column;
-        background: var(--bg-color);
+        background: white;
         text-align: left;
         transition: all .45s ease;
     }
@@ -402,13 +397,13 @@ footer .container .contact li a {
         margin: 17px;
         font-size: 20px;
         transition: all .45s ease;
-        color: var(--text-color);
+        color: red;
     }
     .navlist a:hover{
-        color: var(--main-color);
+        color: darkred;
     }
     .navlist a:active{
-        color: var(--text-color);
+        color: red;
     }
     .navlist.open{
         top: 100%;
